# PoolAllocator

./: .gitignore  CMakeLists.txt
cmake/: compiler_warnings.cmake
include/: pool_allocator.h  stl_pool_allocator.h  stl_pool_allocator.tcc
src/: pool_allocator.cpp
tests/: allocation_test.cpp  limit_test.cpp
